PROJECT(XSL)

INCLUDE_DIRECTORIES(${XS6}/sources/tool)

IF(WIN32)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /c /D _CONSOLE /D WIN32 /D _CRT_SECURE_NO_DEPRECATE /D mxLink /nologo /Zp1")
	SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} /D _DEBUG /D mxDebug /Od /Z7")
	SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} /D NDEBUG /O2")
ELSEIF(UNIX)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-common -DmxLink=1")
	IF(APPLE)
		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -arch i386 -mmacosx-version-min=10.7")
	ENDIF()
	SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -DmxDebug=1 -g -O0 -Wall -Wextra -Wno-missing-field-initializers -Wno-unused-parameter")
	SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
ENDIF()

LIST(APPEND SOURCES ${XS6}/sources/xs_dtoa.c)
LIST(APPEND SOURCES ${XS6}/sources/xs6Common.c)
LIST(APPEND SOURCES ${XS6}/sources/xsl6.c)

ADD_EXECUTABLE(xsl ${SOURCES})
IF(WIN32)
	TARGET_LINK_LIBRARIES(xsl ws2_32.lib comctl32.lib gdi32.lib)
ENDIF()
SET_TARGET_PROPERTIES(xsl PROPERTIES OUTPUT_NAME xsl6)
ADD_CUSTOM_COMMAND(
	TARGET xsl
	POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:xsl> ${XS6_TOOLS_BIN}
	)
